--- a/shared.css
+++ b/shared.css
@@ -11,6 +11,9 @@ body {
     width: 100%;
     background: #2ddf5c;
     padding: 8px 16px;
+    position: fixed;
+    z-index: 1;
+    top: 0px;
 }
 
 .main-header > div {
