--- a/main.css
+++ b/main.css
@@ -1,5 +1,12 @@
 #product-overview {
-    background: url("freedom.jpg");
+    /* background-image: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent); */
+    background-image: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent), url("images/freedom.jpg");
+    /* background-image: radial-gradient(circle at top left, red, blue); */
+    background-size: cover;
+    background-position: left 10% bottom 20%;
+    background-repeat: no-repeat;
+    background-origin: border-box;
+    background-clip: border-box;
     width: 100%;
     height: 528px;
     padding: 10px;
@@ -115,4 +122,5 @@
     border: 2px solid #424242;
     border-radius: 50%;
     margin: auto;
+    padding: 20px;
 }
