--- a/packages/packages.css
+++ b/packages/packages.css
@@ -1,5 +1,5 @@
 main {
-    padding-top: 32px;
+    padding-top: 2rem;
 }
 
 .background {
@@ -13,7 +13,7 @@ main {
 
 .package {
     width: 80%;
-    margin: 16px 0;
+    margin: 1rem 0;
     border: 4px solid #0e4f1f;
     border-left: none;
     position: relative;
@@ -30,18 +30,18 @@ main {
     text-decoration: none;
     color: inherit;
     display: block;
-    padding: 32px;
+    padding: 2rem;
 }
 
 .package__badge {
     position: absolute;
     top: 0;
     right: 0;
-    margin: 20px;
-    font-size: 12px;
+    margin: 1.2rem;
+    font-size: 0.8rem;
     color: white;
     background: #0e4f1f;
-    padding: 8px;
+    padding: 0.5rem;
     z-index: 10;
 }
 
@@ -52,8 +52,8 @@ main {
 .package__info {
     color: #0e4f1f;
     border: 1px #0e4f1f solid;
-    padding: 16px;
-    font-size: 20px;
+    padding: 2rem;
+    font-size: 1.2rem;
     background: white;
 }
 
