--- a/shared.css
+++ b/shared.css
@@ -7,6 +7,17 @@ body {
     margin: 0;
 }
 
+.backdrop  {
+    position: absolute;
+    display: none;
+    z-index: 100;
+    height: 100%;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    top: 0;
+    left: 0;
+}
+
 .main-header {
     width: 100%;
     background: #2ddf5c;
