--- a/main.css
+++ b/main.css
@@ -3,12 +3,12 @@
     background-image: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent), url("images/freedom.jpg");
     /* background-image: radial-gradient(circle at top left, red, blue); */
     background-size: cover;
-    background-position: left 10% bottom 20%;
+    background-position: left 10% bottom 70%;
     background-repeat: no-repeat;
     background-origin: border-box;
     background-clip: border-box;
-    width: 100%;
-    height: 528px;
+    width: 100vw;
+    height: 33vh;
     padding: 0.6rem;
     margin-top: 2.5rem;
     position: relative;
@@ -123,4 +123,53 @@
     border-radius: 50%;
     margin: auto;
     padding: 1.2rem;
+}
+
+.modal {
+    position: fixed;
+    display: none;
+    z-index: 200;
+    top: 20%;
+    left: 30%;
+    width: 40%;
+    background: white;
+    padding: 1rem;
+    border: 1px solid #ccc;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+}
+
+.modal__title {
+    text-align: center;
+    margin: 0 0 1rem 0;   
+}
+
+.modal__actions {
+    text-align: center;
+}
+
+.modal__action {
+    border: 1px solid #0e4f1f;
+    background: #0e4f1f;
+    text-decoration: none;
+    color: white;
+    font: inherit;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+}
+
+.modal__action:hover,
+.modal__action:active {
+    background: #2ddf5c;
+    border-color: #2ddf5c;
+}
+
+.modal__action--negative {
+    background: red;
+    border-color: red;
+}
+
+.modal__action--negative:hover,
+.modal__action--negative:active {
+    background: #ff5454;
+    border-color: #ff5454;
 }
