responsive design added

--- a/shared.css
+++ b/shared.css
@@ -8,7 +8,12 @@ body {
     overflow-x: hidden;
 }
 
-.backdrop  {
+main {
+    min-height: calc(100vh - 3.5rem - 8em);
+    margin-top: 3.5rem;
+}
+
+.backdrop {
     position: fixed;
     display: none;
     z-index: 100;
@@ -22,13 +27,13 @@ body {
 .main-header {
     width: 100%;
     background: #2ddf5c;
-    padding: 8px 16px;
+    padding: 0.5rem 1rem;
     position: fixed;
     z-index: 1;
-    top: 0px;
+    top: 0;
 }
 
-.main-header > div {
+.main-header>div {
     display: inline-block;
     vertical-align: middle;
 }
@@ -43,40 +48,33 @@ body {
     vertical-align: middle;
 }
 
-    .toggle-button:focus {
-        outline: none;
-    }
+.toggle-button:focus {
+    outline: none;
+}
 
-    .toggle-button__bar {
-        width: 100%;
-        height: 0.2rem;
-        background: black;
-        display: block;
-        margin: 0.6rem 0;
-    }
-
-
+.toggle-button__bar {
+    width: 100%;
+    height: 0.1rem;
+    background: white;
+    display: block;
+    margin: 0.6rem 0;
+}
 
 .main-header__brand {
     color: #0e4f1f;
     text-decoration: none;
     font-weight: bold;
-    font-size: 22px;
-    height: 22px;
+    height: 2.5rem;
     display: inline-block;
     vertical-align: middle;
 }
 
 .main-header__brand img {
-    /* height: 100%; */
     height: 100%;
 }
 
 .main-nav {
-    display: inline-block;
-    text-align: right;
-    width: calc(100% - 122px);
-    vertical-align: middle;
+    display: none;
 }
 
 .main-nav__items {
@@ -87,7 +85,7 @@ body {
 
 .main-nav__item {
     display: inline-block;
-    margin: 0 16px;
+    margin: 0 2rem;
 }
 
 .main-nav__item a,
@@ -95,7 +93,7 @@ body {
     text-decoration: none;
     color: #0e4f1f;
     font-weight: bold;
-    padding: 3px 0;
+    padding: 0.2rem 0;
 }
 
 .main-nav__item a:hover,
@@ -108,7 +106,7 @@ body {
 .mobile-nav__item--cta a {
     color: white;
     background: #ff1b68;
-    padding: 8px 16px;
+    padding: 0.5rem 1rem;
     border-radius: 8px;
 }
 
@@ -123,8 +121,8 @@ body {
 
 .main-footer {
     background: black;
-    padding: 32px;
-    margin-top: 48px;
+    padding: 2rem;
+    margin-top: 3rem;
 }
 
 .main-footer__links {
@@ -135,8 +133,8 @@ body {
 }
 
 .main-footer__link {
-    display: inline-block;
-    margin: 0 16px;
+    display: block;
+    margin: 1rem 0;
 }
 
 .main-footer__link a {
@@ -147,9 +145,10 @@ body {
 .main-footer__link a:hover,
 .main-footer__link a:active {
     color: #ccc;
-} 
+}
 
 /* mobile-nav styling */
+
 .mobile-nav {
     display: none;
     position: fixed;
@@ -162,12 +161,12 @@ body {
 }
 
 .mobile-nav__items {
-    width: 90%; 
+    width: 90%;
     height: 100%;
     list-style: none;
     margin: 10% auto;
     padding: 0;
-    text-align: center;    
+    text-align: center;
 }
 
 .mobile-nav__item {
@@ -179,6 +178,7 @@ body {
 }
 
 /* button styling */
+
 .button {
     background: #0e4f1f;
     color: white;
@@ -200,6 +200,32 @@ body {
     outline: none;
 }
 
+.button[disabled] {
+    cursor: not-allowed;
+    border: #a1a1a1;
+    background: #ccc;
+    color: #a1a1a1;
+}
+
 .open {
     display: block !important;
+}
+
+@media (min-width: 40rem) {
+    .toggle-button {
+        display: none;
+    }
+    .main-nav {
+        display: inline-block;
+        text-align: right;
+        width: calc(100% - 44px);
+        vertical-align: middle;
+    }
+}
+
+@media (min-width: 40rem) {
+    .main-footer__link {
+        display: inline-block;
+        margin: 0 1rem;
+    }
 }
