--- a/dls/packages/packages.css
+++ b/dls/packages/packages.css
@@ -4,7 +4,7 @@ main {
 
 .background {
     background: url("../images/plans-background.jpg") center/cover;
-    filter: grayscale(50%);
+    filter: grayscale(40%);
     width: 100vw;
     height: 100vh;
     position: fixed;
@@ -17,13 +17,13 @@ main {
     border: 4px solid #0e4f1f;
     border-left: none;
     position: relative;
-    z-index: 0;
 }
 
 .package:hover,
 .package:active {
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    box-shadow: 2px 2px 4px rgba(0,0,0,0.5);
     border-color: #ff5454;
+    /* border-color: #ff5454 !important; */
 }
 
 .package a {
@@ -42,23 +42,26 @@ main {
     color: white;
     background: #ff5454;
     padding: 0.5rem;
-    z-index: 10;
 }
 
 .package__subtitle {
-    color: #979799;
+    color: #979797;
 }
 
 .package__info {
-    color: #0e4f1f;
-    border: 1px #0e4f1f solid;
-    padding: 2rem;
+    padding: 1rem;
+    border: 1px solid #0e4f1f;
     font-size: 1.2rem;
+    color: #0e4f1f;
     background: white;
 }
 
+.clearfix {
+    clear: both;
+}
+
 #plus {
-    background: rgba(213, 255, 200, 0.95);
+    background: rgba(213, 255, 220, 0.95);
 }
 
 #free {
@@ -69,14 +72,9 @@ main {
     text-align: right;
 }
 
-.clearfix {
-    clear: both;
-}
-
 #free:hover,
 #free:active {
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    border-color: #ff5454;
+    border-left-color: #ff5454;
 }
 
 #premium {
@@ -89,28 +87,4 @@ main {
 
 #premium .package__subtitle {
     color: #bbb;
-}
-
-@media (min-width: 40rem) {
-    main {
-        max-width: 1500px;
-    }
-}
-
-@media (min-width: 1500px) {
-    .package {
-        border-left: 4px solid #0e4f1f;
-    }
-
-    #free {
-        border-right: 4px solid #0e4f1f;
-    }
-
-    .package:hover,
-    .package:active,
-    #free:hover,
-    #free:active {
-        box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-        border-color: #ff5454;
-    }
 }
