--- a/main.css
+++ b/main.css
@@ -1,22 +1,17 @@
+/* product overview */
 #product-overview {
     /* background-image: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent); */
     background-image: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent), url("images/freedom.jpg");
     /* background-image: radial-gradient(circle at top left, red, blue); */
     background-size: cover;
-    background-position: left 10% bottom 70%;
+    background-position: center;
     background-repeat: no-repeat;
     background-origin: border-box;
     background-clip: border-box;
     width: 100vw;
     height: 33vh;
     padding: 0.6rem;
-    margin-top: 2.5rem;
     position: relative;
-}
-
-.section-title {
-    color: #2ddf5c;
-    text-align: center;
 }
 
 #product-overview h1 {
@@ -25,28 +20,27 @@
     position: absolute;
     bottom: 5%;
     left: 3%;
+    font-size: 1.6rem;
 }
 
-.plan__list {
-    width: 80%;
-    margin: auto;
+
+.section-title {
+    color: #2ddf5c;
     text-align: center;
 }
+
 
 .plan {
     background: #d5ffdc;
     text-align: center;
-    padding: 2rem;
-    margin: 0.5rem;
-    display: inline-block;
-    width: 30%;
-    vertical-align: middle;
+    padding: 1rem;
+    margin: 0.5rem 0;
+    width: 100%;
 }
 
 .plan--highlighted {
     background: #19b84c;
     color: white;
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 .plan__annotation {
@@ -97,15 +91,9 @@
 
 .key-features__list {
     list-style: none;
-    margin:0;
+    margin: 0;
     padding: 0;
-    text-align: middle;
-}
-
-.key-feature {
-    display: inline-block;
-    width: 30%;
-    vertical-align: top;
+    text-align: center;
 }
 
 .key-feature__description {
@@ -125,6 +113,7 @@
     padding: 1.2rem;
 }
 
+
 .modal {
     position: fixed;
     display: none;
@@ -140,7 +129,7 @@
 
 .modal__title {
     text-align: center;
-    margin: 0 0 1rem 0;   
+    margin: 0 0 1rem 0;
 }
 
 .modal__actions {
@@ -172,4 +161,44 @@
 .modal__action--negative:active {
     background: #ff5454;
     border-color: #ff5454;
+}
+
+/* media queries: change whne the condition is met */
+
+/* change font-size to 3rem when min-width is 40rem or larger */
+
+@media (min-width: 40rem) and (min-height: 40rem) {
+    #product-overview {
+        height: 40vh;
+        background-position: 50% 25%;
+    }
+    #product-overview h1 {
+        font-size: 3rem;
+    }
+}
+
+@media (min-width: 40rem) {
+    .plan__list {
+        width: 100%;
+        text-align: center;
+    }
+    .plan {
+        display: inline-block;
+        width: 30%;
+        vertical-align: middle;
+        min-width: 13rem;
+        max-width: 25rem;
+    }
+    .plan--highlighted {
+        box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
+    }
+}
+
+@media (min-width: 40rem) {
+    .key-feature {
+        display: inline-block;
+        width: 30%;
+        vertical-align: top;
+        max-width: 25rem;
+    }
 }
