--- a/customers/customers.css
+++ b/customers/customers.css
@@ -16,11 +16,18 @@ main {
     width: 100%;
     max-width: 40rem;
     box-shadow: 3px 3px 5px 3px rgba(0, 0, 0, 0.3);
+    transform: skew(20deg);
+    overflow: hidden;
+}
+
+#customer-1:hover .testimonial__image-container {
+    animation: flip-customer 1s ease-out forwards;
 }
 
 .testimonial__image {
     width: 100%;
     vertical-align: top;
+    transform: skew(-20deg) scale(2,2);
 }
 
 .testimonial__info {
@@ -64,17 +71,28 @@ main {
 
 @media (min-width: 40rem) {
     .testimonial {
+        display: flex;
+        align-items: center;
         margin: 3rem auto;
         max-width: 1500px;
+        justify-content: space-around;
     }
     .testimonial__image-container {
-        display: inline-block;
-        vertical-align: middle;
         width: 66%;
     }
     .testimonial__info {
-        display: inline-block;
-        vertical-align: middle;
         width: 30%;
+    }
+}
+
+@keyframes flip-customer {
+    0% {
+        transform: rotateY(0) skew(20deg);
+    }
+    50% {
+        transform: rotateY(160deg) skew(20deg);
+    }
+    100% {
+        transform: rotateY(360deg) skew(20deg);
     }
 }
