--- a/main.css
+++ b/main.css
@@ -116,7 +116,9 @@
 
 .modal {
     position: fixed;
-    display: none;
+    opacity: 0;
+    transform: translateY(-3rem);
+    transition: opacity 200ms ease-out 100ms, transform 500ms ease-out 100ms; 
     z-index: 200;
     top: 20%;
     left: 30%;
@@ -179,26 +181,35 @@
 
 @media (min-width: 40rem) {
     .plan__list {
+        display: flex;
         width: 100%;
         text-align: center;
+        justify-content: space-evenly;
+        align-items: center;
     }
     .plan {
-        display: inline-block;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         width: 30%;
-        vertical-align: middle;
         min-width: 13rem;
         max-width: 25rem;
+        height: 28rem;
     }
     .plan--highlighted {
         box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
+        height: 30rem;
     }
 }
 
 @media (min-width: 40rem) {
     .key-feature {
-        display: inline-block;
         width: 30%;
-        vertical-align: top;
         max-width: 25rem;
+    }
+
+    .key-features__list {
+        display: flex;
+        justify-content: space-evenly;
     }
 }
