--- a/packages/packages.css
+++ b/packages/packages.css
@@ -18,12 +18,22 @@ main {
     border-left: none;
     position: relative;
     z-index: 0;
+    overflow: hidden;
 }
 
 .package:hover,
 .package:active {
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     border-color: #ff5454;
+}
+
+#plus:hover,
+#plus:active,
+#free:hover,
+#free:active,
+#premium:hover,
+#premium:active{
+    animation: move-up 1s ease-out forwards;  
 }
 
 .package a {
@@ -37,14 +47,17 @@ main {
     position: absolute;
     top: 0;
     right: 0;
-    margin: 1.2rem;
+    margin: 0;
     font-size: 0.8rem;
     color: white;
     background: #ff5454;
     padding: 0.5rem;
     z-index: 10;
+    transform: rotateZ(45deg) translateX(3.5rem) translateY(-1rem);
+    transform-origin: center;
+    width: 12rem;
+    text-align: center;
 }
-
 .package__subtitle {
     color: #979799;
 }
@@ -52,7 +65,7 @@ main {
 .package__info {
     color: #0e4f1f;
     border: 1px #0e4f1f solid;
-    padding: 2rem;
+    padding: 1rem;
     font-size: 1.2rem;
     background: white;
 }
@@ -112,5 +125,19 @@ main {
     #free:active {
         box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         border-color: #ff5454;
+    }
+}
+
+@keyframes move-up {
+    0% {
+        transform: translateY(0);
+    }
+
+    33% {
+        transform: translateY(-1.5rem);
+    }
+
+    100% {
+        transform: translateY(-1rem);
     }
 }
